peac_dev/force-app/main/default/objects/Loan_Contract__c/Loan_Contract__c.object-meta.xml
<CustomObject>
    <label>Loan Contract</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>