peac_dev/force-app/main/default/objects/Loan_Contract__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>