peac_dev/force-app/main/default/objects/Loan_Contract__c/fields/Include_as_Payoff__c.field-meta.xml
<CustomField>
    <fullName>Include_as_Payoff__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this contract is added as a Payoff on the Opportunity</inlineHelpText>
    <label>Include as Payoff</label>
    <type>Checkbox</type>
</CustomField>