peac_dev/force-app/main/default/objects/Loan_Contract__c/fields/Payoff__c.field-meta.xml
<CustomField>
    <fullName>Payoff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Payoff record if this Loan Contract was selected as a Payoff contract.</inlineHelpText>
    <label>Payoff</label>
    <referenceTo>Payoff__c</referenceTo>
    <relationshipLabel>Loan Contracts</relationshipLabel>
    <relationshipName>Loan_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>